# nn-zero-to-hero

./: pyproject.toml
GPT_from_scratch/.ipynb_checkpoints/: GPT_from_scratch-checkpoint.ipynb
lectures/micrograd/: micrograd_lecture_first_half_roughly.ipynb
lectures/micrograd/.ipynb_checkpoints/: micrograd_lecture_second_half_roughly-checkpoint.ipynb
numpy_tutorial/: numpy_tutorial_(freeCodeCamp).ipynb
numpy_tutorial/.ipynb_checkpoints/: data_to_load-checkpoint.txt  numpy_tutorial_(freeCodeCamp)-checkpoint.ipynb
vmls/.ipynb_checkpoints/: 01_vmls-checkpoint.ipynb
